package patronObserver.observer4;

public interface Subscriptor {

    void notificar(String product);
}
